# file-finder

./: README.md  index.html  package-lock.json  package.json
exportToHTML/: files.rs.html
src/: App.css  App.tsx  icons.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: drives.rs  files.rs  indexing.rs  mod.rs  search.rs
src-tauri/src/index/: builder.rs  entry.rs  mod.rs  store.rs  trigram.rs
src-tauri/src/mft/: arena.rs  mod.rs  scanner.rs  types.rs
src-tauri/src/platform/: windows.rs
src-tauri/src/search/: engine.rs  mod.rs  scoring.rs
src-tauri/src/types/: drive.rs  filter.rs  mod.rs  result.rs
