[package]
name = "file-finder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
globset = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
ahash = "0.8"
roaring = "0.10"
arc-swap = "1.6"
crossbeam-channel = "0.5"
rayon = "1.10"



# Матчинг
regex = "1"
memchr = "2"

# Дата/время
time = { version = "0.3", features = ["parsing", "formatting", "macros", "local-offset"] }
dirs = "6.0.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi", "handleapi", "winbase", "winnt", "ioapiset",
    "errhandlingapi", "minwindef", "ntdef", "winerror"
] }
