[package]
name = "file-finder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ahash = "0.8"
arc-swap = "1.6"
ignore = "0.4"
memchr = "2"
num_cpus = "1.16"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.10"

time = { version = "0.3", features = ["formatting", "macros"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi",
    "handleapi",
    "winbase",
    "winnt",
    "ioapiset",
    "errhandlingapi",
    "minwindef",
    "winerror",
] }
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
