[package]
name = "file-finder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
arc-swap = "1"
memchr = "2"
parking_lot = "0.12"
rayon = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
num_cpus = "1"
ignore = "0.4"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi", "handleapi", "winnt", "winbase", "ioapiset",
    "errhandlingapi", "minwindef", "ntdef", "winerror"
] }
